SERVER-38621 Do not ignore regex options when specified first